javascript + fixat spacing på borden

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,12 @@
     padding: 0;
     margin: 0;
 }
+html{
+    background-color: #808080;
+}
+body{
+    background-color: #808080;
+}
 
 .main-container{
     background-image: url("images/floorplantest.png");
@@ -16,24 +22,45 @@ body{
 }
 .round-table{
     border-radius: 50%;
-    width:75px;
-    height:75px;
+    width:95px;
+    height:95px;
     justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: column;
     margin-bottom:1.75rem;
+    cursor: pointer;
 }
 .square-table{
-    width: 75px;
-    height: 75px;
+    width: 50px;
+    height: 50px;
     border: 2px solid violet;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
 }
 .rectangle-table{
     width: 75px;
     height: 100px;
     border: 2px solid violet;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
 }
+.round-table-big{
+    border-radius: 50%;
+    width:125px;
+    height:125px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-bottom:1.75rem;
+    cursor: pointer;}
 #bordvänster{
     height: auto;
 }
@@ -42,11 +69,18 @@ body{
 }
 #bordhöger{
     height:65vh;
+    display: flex;
+    flex-direction: column-reverse;
+    align-content: flex-end;
+    flex-wrap: wrap;
+}
+form>label[for="antal"]{
+    margin-left: 6px;
 }
 #bordbotten{
     height: 30vh;
     display: flex;
-    flex-direction: row;
+    flex-direction: column-reverse;
     flex-wrap: wrap;
 }
 .booking-container{
@@ -61,4 +95,70 @@ body{
 .bottencontainer{
     display: flex;
     flex-direction: row;
+    align-items: center;
+}
+.bottencontainer:first-child{
+    justify-content: space-evenly;
+    margin-bottom: 40px;
+    margin-right: 50px;
+    margin-left: 20px;
+}
+.free{
+    background-color: dodgerblue;
+}
+.booked{
+    background-color: yellow;
+}
+#B1{
+margin-left: 120px;
+margin-top: 130px;
+}
+#B2{
+ margin-left: 120px;
+}
+#B3{
+margin-left: 225px;
+}
+#B4{
+margin-left: 120px;
+}
+#B5{
+    margin-left: 225px;
+}
+#B6{
+margin-left: 120px;
+}
+
+#B11{
+margin-left: 250px;
+margin-right: 10px;
+}
+#B13{
+    margin-left: 70px;
+    margin-right: 43px;
+    margin-bottom: 50px;
+}
+#B14{
+    margin-bottom: 50px;
+}
+#B15,#B16{
+    margin-right: 94px;
+}
+#B15{
+    margin-bottom: 30px;
+    margin-top: 60px;
+}
+
+#outputbox{
+    color: white;
+}
+#outputbox>h1{
+    color: black;
+    background-color: coral;
+    font-size: 1.5rem;
+}
+
+#outputbox>p{
+    color: white;
+    font-size: 1.5rem;
 }
